tests/ast_interpreter/err_duplicate_param_name.expected
<string>:1:10: error: parameter a already defined
fun f(a, a) {
         ^
